Findbugs - fixed performance warnings.